--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ if (!doNotTrack) {
     <img src="images/avatar4.png" class="rounded-circle mx-auto d-block img-fluid"/>
     <!--- You can create your own avatar using https://avatarmaker.com/ --->
 
-    <h1 class="greeting"> Hi! I am Shivika K Bisen </h1>
+    <h1 class="greeting"> Hi! I am Shivika</h1>
 
     <div class="typing-carousel">
       <span id="ityped" class="ityped"></span>
