--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ if (!doNotTrack) {
 <!--------------------------------------------- About Section --------------------------------------------->
 <!--------------------------------------------------------------------------------------------------------->      
 
-          <div class="container-fluid section-holder d-flex bg-white">
+          <div class="container-fluid section-holder d-flex bg-black">
             <div class="container anchor p-lg-5 about-section" id="about">
   <div class="row pt-sm-2 pt-md-4 align-self-center">
     
