--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@ if (!doNotTrack) {
 
 
       
-      <a href="files/resumetex.pdf" target="#"
-        ><button class="btn btn-dark">Tex Resume</button></a>
+      <a href="files/Resume.pdf" target="#"
+        ><button class="btn btn-dark">Resume</button></a>
 
      
     </div>
