--- a/index.html
+++ b/index.html
@@ -159,12 +159,13 @@ if (!doNotTrack) {
 
     <ul id="typing-carousel-data">
 
-       <li >Welcome to my webiste!</li>
-       <li>Feel free to explore and contact.</li>
-      <li>I am a Full Stack Data Scientist.</li>
+       <li >Welcome to my website!</li>
+      <li>I am a Data Scientist.</li>
       <li> MS Data Science Graduate from University of Michigan Ann Arbor</li>
       <li>I am Machine learning and Artificial Intelligence Professional</li>
       <li>I love to work with Data, get insights and visualize it!</li>
+      <li>I love to develop ML/DL algorithm and implement it!</li>
+      <li>Feel free to explore and contact.</li>
       
     </ul>
     <div class="text-container ml-auto">
