--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ if (!doNotTrack) {
       
       ></span>
     </span>
-    <div class="circular-progress-value">Data Vis</div>
+    <div class="circular-progress-value">Data Vis 90%</div>
   </div>
 </div>
 
