--- a/index.html
+++ b/index.html
@@ -840,11 +840,11 @@ if (!doNotTrack) {
 >
   <div class="card mt-1">
     <div class="card">
-      <a class="card-header" href="http://d4gumsi.pythonanywhere.com/projects/pdfparsing">
+      <a class="card-header" href="">
         <div>
           <div class="d-flex">
             
-            <img class="card-img-xs" src="images/projects/logo.png">
+            <img class="card-img-xs" src="https://www.data4good.center/projects/chetah">
             
             <h5 class="card-title mb-0">Chetah Search Engine</h5>
           </div>
