--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ if (!doNotTrack) {
         <a href="https://umich.edu/">University of Michigan Ann Arbor</a>
       </h5>
       
-      <p class="p-1 text-justify"> Shivika is a Data Scientist with 3 years of experience in building ML models for business applications and has a track record of solving complex problems. She has worked with various Fortune 10 companies in the computer & IoT space and graduated from the University of Michigan, Ann Arbor in Dec 2020 with an MS in Data Science degree. Her expertise is in Online/incremental ML, NLP, search- recommendation, ML(Classification, Regression), Deep Learning, Statistical techniques (Time series modeling) & Data Visualization. </br> 
+      <p class="p-1 text-justify"> Shivika is a Data Scientist with 2+ years of experience in building ML models for business applications and has a track record of solving complex problems. She has worked with various Fortune 10 companies in the computer software & supply chain and graduated from the University of Michigan, Ann Arbor with an MS in Data Science degree. Her expertise is in real time ML(Classification, Regression),  NLP-search, Time series & Data Visualization. </br> 
 <!-- 
         <br>I graduated from the University of Michigan Ann Arbor in Dec 2020 with a Master's in Data Science. I have strong data science and software engineering experience in developing applications at scale using programming languages such as Python and Javascript.</br>  -->
 	    
