--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/chatbot.png"/>
-                                        <h5 class="card-title mb-0"> LLM App text to SQL</h5>
+                                        <h5 class="card-title mb-0"> LLM - Text to SQL</h5>
                                     </div>
                                     <div class="sub-title">
                                         <span>Developer</span>
