--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="text-container ml-auto">
             <ul class="social-link">
                 <li>
-                    <a href="mailto:sbisen@umich.edu" target="/"><i class="fa fa-envelope-square"></i></a>
+                    <a href="mailto:shivikakbisen@gmail.com" target="/"><i class="fa fa-envelope-square"></i></a>
                     <a href="https://github.com/sbisen" target="/"><i class="fab fa-github-square"></i></a>
                     <a href="https://medium.com/@sbisen" target="/"><i class="fab fa-medium"></i></a>
                     <a href="https://www.linkedin.com/in/shivika-k-bisen/" target="/"><i class="fab fa-linkedin"></i></a>
@@ -502,7 +502,7 @@
             <div class="col-md-4 col-sm-12">
                 <h5>Contact Me</h5>
                 <ul>
-                    <li><span>Email: </span> <span>sbisen@umich.edu</span></li>
+                    <li><span>Email: </span> <span>shivikakbisen@gmail.com</span></li>
                     <li><span>Phone: </span> <span>&#43;1 (248) 229-6074</span></li>
                 </ul>
             </div>
