--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="text-container ml-auto">
             <ul class="social-link">
                 <li>
-                    <a href="mailto:shivikakbisen@gmail.com" target="/"><i class="fa fa-envelope-square"></i></a>
+                    <a href="mailto:sbisen@umich.edu" target="/"><i class="fa fa-envelope-square"></i></a>
                     <a href="https://github.com/sbisen" target="/"><i class="fab fa-github-square"></i></a>
                     <a href="https://medium.com/@sbisen" target="/"><i class="fab fa-medium"></i></a>
                     <a href="https://www.linkedin.com/in/shivika-k-bisen/" target="/"><i class="fab fa-linkedin"></i></a>
@@ -98,7 +98,17 @@
             <div class="col-sm-6">
                 <h3 class="p-1">Shivika K Bisen</h3>
                 <h5 class="p-1">Data Scientist - Gen AI/ML<br><a href="https://umich.edu/">Viasat Inc</a></h5>
-                <p class="p-1 text-justify">I am an AI/ML Data Scientist with 5 years of experience. I've led full stack Gen AI & ML projects across organizations such as Viasat, J&J, UMich (with Microsoft, Google). At Viasat, I led the deployment of LLM-based text to SQL DB query tool. This initiative not only boosted analytics efficiencies but also established a new domain of LLM projects within the company. My expertise is in deploying a variety of LLMs (Lama2, Claude3, GPT-4, BERT and RoBERTa), predictive model in a broad spectrum of applications from chatbot, search recommendation-ranking, social networks, CV to analytics. My unique strength is in ability to manage complex AI projects from concept to scalable production, demonstrating my capability to lead end-to-end project lifecycles effectively. In my free time I enjoy painting, meditation and technical content creation in Medium or being a Speaker in AI Conferences.</p>
+                <p class="p-1 text-justify">
+                    <p>Seasoned Data Scientist with 5 years of experience in Gen AI and ML models from inception to production at scale</p>
+                    <p><strong>Organizations</strong> Viasat, J&J (with Paxafe), Google and Microsoft (with UMich)</p>
+                    <p><strong>Expertise</strong></p>
+                    <ul>
+                        <li>LLMs to production: RAG & fine-tuning for Info retrieval and ranking (production at scale)</li>
+                        <li>Analytics: Data pipeline with SQL data model, dashboard (Tableau, Superset), metrics, Cloud</li>
+                        <li>End-to-End Predictive ML: Advanced feature engineering, XGBoost</li>
+                    </ul>
+                    <p><strong>Domains</strong> Advertising & Social Media, Mobility & Logistics, Search & Recommendation Systems</p>
+                </p>    
                 <a href="files/Resume_Shivika.pdf" target="#"><button class="btn btn-dark">Resume</button></a>
             </div>
             <div class="col-sm-6 pt-5 pl-md-4 pl-sm-3 pt-sm-0">
@@ -333,7 +343,7 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/chatbot.png"/>
-                                        <h5 class="card-title mb-0"> LLM - Text to SQL</h5>
+                                        <h5 class="card-title mb-0"> LLM App text to SQL</h5>
                                     </div>
                                     <div class="sub-title">
                                         <span>Developer</span>
@@ -502,7 +512,7 @@
             <div class="col-md-4 col-sm-12">
                 <h5>Contact Me</h5>
                 <ul>
-                    <li><span>Email: </span> <span>shivikakbisen@gmail.com</span></li>
+                    <li><span>Email: </span> <span>sbisen@umich.edu</span></li>
                     <li><span>Phone: </span> <span>&#43;1 (248) 229-6074</span></li>
                 </ul>
             </div>
