--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
                 <h5 class="p-1">Data Scientist - Gen AI/ML<br><a href="https://umich.edu/">Viasat Inc</a></h5>
                 <p class="p-1 text-justify">
                     <p>Seasoned Data Scientist with 5 years of experience in Gen AI and ML models from inception to production at scale</p>
-                    <p><strong>Organizations</strong> Viasat, J&J (with Paxafe), Google and Microsoft (with UMich)</p>
+                    <p><strong>Organizations</strong> Viasat, J&J (Paxafe), Google and Microsoft (UMich)</p>
                     <p><strong>Expertise</strong></p>
                     <ul>
                         <li>LLMs to production: RAG & fine-tuning for Info retrieval and ranking (production at scale)</li>
-                        <li>Analytics: Data pipeline with SQL data model, dashboard (Tableau, Superset), metrics, Cloud</li>
-                        <li>End-to-End Predictive ML: Advanced feature engineering, XGBoost</li>
+                        <li>Analytics: Data pipeline, dashboard, metrics, cloud</li>
+                        <li>End-to-End Predictive ML with advanced feature engineering </li>
                     </ul>
                     <p><strong>Domains</strong> Advertising & Social Media, Mobility & Logistics, Search & Recommendation Systems</p>
                 </p>    
@@ -122,7 +122,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Python</div>
+                            <div class="circular-progress-value">Python / SQL</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -133,7 +133,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">LLM / Gen AI </div>
+                            <div class="circular-progress-value">LLM / AI-ML </div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -144,7 +144,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Production AI</div>
+                            <div class="circular-progress-value">Prod (CI/CD)</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -157,18 +157,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Data pipelines</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress sky">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">End to End AI</div>
+                            <div class="circular-progress-value">Data ETL</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -179,7 +168,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Cloud-AWS/GCP</div>
+                            <div class="circular-progress-value">Cloud</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -190,29 +179,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Dashboard</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress pink">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">Search/Ranking</div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-lg-4 p-2">
-                        <div class="circular-progress green">
-                            <span class="circular-progress-left">
-                                <span class="circular-progress-bar circular-progress-percentage-100"></span>
-                            </span>
-                            <span class="circular-progress-right">
-                                <span class="circular-progress-bar"></span>
-                            </span>
-                            <div class="circular-progress-value">CI-CD</div>
+                            <div class="circular-progress-value">Analytics</div>
                         </div>
                     </div>
                 </div>
