--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Python / SQL</div>
+                            <div class="circular-progress-value">Python,SQL,JS</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -144,7 +144,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Prod (CI/CD)</div>
+                            <div class="circular-progress-value">Analytics</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -179,7 +179,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Analytics</div>
+                            <div class="circular-progress-value">Prod (CI/CD)</div>
                         </div>
                     </div>
                 </div>
@@ -463,11 +463,11 @@
         <h1 class="text-center">Achievements</h1>
         <div class="achievement-entry text-left">
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=w9IgzH5YssQ" target="_blank">End-to-end AI deployment for solving complex problems for Fortune 100 companies at scale</a></li>
-                <li><a href="https://genaisummit.ai/#/" target="_blank">Attendent Gen AI Summit San Fransisco 2024 focused on AI, LLM and multimodal agents</a></li>
-                <li><a href="https://www.comet.com/site/about-us/news-and-events/press-releases/responding-to-community-demand-comet-announces-convergence-2022-bringing-together-leaders-to-share-insights-on-how-to-solve-the-enterprises-biggest-challenges-with-machine-learning/" target="_blank">Speaker at ML Productionalization Conference</a></li>
-                <li><a href="https://www.kaggle.com/competitions/umich-si650-pandemic-ir-system-v2/leaderboard" target="_blank">Top 2nd rank in Kaggle competition for retrival and ranking algorithm</a></li>
-                <li><a href="https://lsa.umich.edu/content/dam/stats-assets/alumni-spotlights/Alumni%20Spotlight%20Newsletter-ShivikaB%20(1).pdf" target="_blank">Awarded UMich Scholarship for exceptional STEM achievement</a></li>
+                <li><a href="https://www.youtube.com/watch?v=w9IgzH5YssQ" target="_blank">Productionalize AI/ML model at scale</a></li>
+                <li><a href="https://genaisummit.ai/#/" target="_blank">Gen AI Summit SF 2024</a></li>
+                <li><a href="https://www.comet.com/site/about-us/news-and-events/press-releases/responding-to-community-demand-comet-announces-convergence-2022-bringing-together-leaders-to-share-insights-on-how-to-solve-the-enterprises-biggest-challenges-with-machine-learning/" target="_blank">Speaker at ML Conference</a></li>
+                <li><a href="https://www.kaggle.com/competitions/umich-si650-pandemic-ir-system-v2/leaderboard" target="_blank">Kaggle winner for retriver algorithm</a></li>
+                <li><a href="https://lsa.umich.edu/content/dam/stats-assets/alumni-spotlights/Alumni%20Spotlight%20Newsletter-ShivikaB%20(1).pdf" target="_blank"> UMich Scholarship for STEM achievement</a></li>
             </ul>
         </div>
     </div>
