--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <span class="ityped-cursor"></span>
         </div>
         <ul id="typing-carousel-data">
-            <li>My name is Shivika & I am a Data Scientist - Gen AI/ ML</li>
-            <li>I enjoy working in full stack productionalizing of LLM and predictive ML models</li>
+            <li>My name is Shivika and I work in LLM, NLP, Predictive Modeling</li>
+            <li>I enjoy building products from concept to final tool at scale </li>
         </ul>
         <div class="text-container ml-auto">
             <ul class="social-link">
@@ -97,17 +97,16 @@
         <div class="row pt-sm-2 pt-md-4 align-self-center">
             <div class="col-sm-6">
                 <h3 class="p-1">Shivika K Bisen</h3>
-                <h5 class="p-1">Data Scientist - Gen AI/ML<br><a href="https://umich.edu/">Viasat Inc</a></h5>
+                <h5 class="p-1">Data Scientist - LLM<br><a href="https://umich.edu/">Viasat Inc</a></h5>
                 <p class="p-1 text-justify">
-                    <p>Seasoned Data Scientist with 5 years of experience in Gen AI and ML models from inception to production at scale</p>
-                    <p><strong>Organizations</strong> Viasat, J&J (Paxafe), Google and Microsoft (UMich)</p>
+                    <p> Data Scientist with 5 years of experience in LLM and NLP product from inception to production at scale</p>
+                    <p><strong>Organizations</strong> Viasat, Paxafe - J&J, UMich - Google and Microsoft</p>
                     <p><strong>Expertise</strong></p>
                     <ul>
-                        <li>LLMs to production: RAG & fine-tuning for Info retrieval and ranking (production at scale)</li>
+                        <li>LLMs Product: RAG, Embedding, Vector store and optimized prompt with curated retrieval algorithms</li>
                         <li>Analytics: Data pipeline, dashboard, metrics, cloud</li>
-                        <li>End-to-End Predictive ML with advanced feature engineering </li>
+                        <li>Predictive modeling with advanced feature engineering </li>
                     </ul>
-                    <p><strong>Domains</strong> Advertising & Social Media, Mobility & Logistics, Search & Recommendation Systems</p>
                 </p>    
                 <a href="files/Resume_Shivika.pdf" target="#"><button class="btn btn-dark">Resume</button></a>
             </div>
@@ -133,7 +132,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">LLM / AI-ML </div>
+                            <div class="circular-progress-value">LLM/NLP </div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -144,7 +143,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Analytics</div>
+                            <div class="circular-progress-value">BI Analytics</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -168,7 +167,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Cloud</div>
+                            <div class="circular-progress-value">ML Cloud</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -187,15 +186,6 @@
         </div>
     </div>
 </div>
-
-<!-- <div class="container-fluid section-holder bg-white" id="experiences">
-    <div class="container-fluid anchor pb-5 experiences-section">
-        <div class="container timeline text-justify">
-            <img src="images/Job.png" width="1100" height="700" style="border:0px;margin:0px;float:left;" />
-            <img src="images/expertise.png" width="1100" height="700" style="border:0px;margin:0px;float:left;" />
-        </div>
-    </div>
-</div> -->
 
 <div class="container-fluid section-holder bg-white" id="experiences">
     <div class="container anchor p-lg-5 experiences-section">
