--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
     </div>
     <div class="container content text-center">
         <img src="images/avatar4.png" class="rounded-circle mx-auto d-block img-fluid"/>
-        <h1 class="greeting">Hi, welcome to my website!</h1>
+        <h1 class="greeting">Hi, Welcome!</h1>
         <div class="typing-carousel">
             <span id="ityped" class="ityped"></span>
             <span class="ityped-cursor"></span>
         </div>
         <ul id="typing-carousel-data">
-            <li>My name is Shivika and I work in LLM, NLP, Predictive Modeling</li>
-            <li>I enjoy building products from concept to final tool at scale </li>
+            <li>I'm Shivika, working in Generative AI, LLMs and NLP world</li>
+            <li>Bringing innovative Generative AI solutions to life</li>
         </ul>
         <div class="text-container ml-auto">
             <ul class="social-link">
@@ -97,15 +97,15 @@
         <div class="row pt-sm-2 pt-md-4 align-self-center">
             <div class="col-sm-6">
                 <h3 class="p-1">Shivika K Bisen</h3>
-                <h5 class="p-1">Data Scientist - LLM<br><a href="https://umich.edu/">Viasat Inc</a></h5>
+                <h5 class="p-1">Generative AI - Data Science<br><a href="https://umich.edu/">Viasat Inc</a></h5>
                 <p class="p-1 text-justify">
-                    <p> Data Scientist with 5 years of experience in LLM and NLP product from inception to production at scale</p>
+                    <p> Expertise in LLM, NLP, Agentic AI products from inception to production at scale</p>
                     <p><strong>Organizations</strong> Viasat, Paxafe - J&J, UMich - Google and Microsoft</p>
                     <p><strong>Expertise</strong></p>
                     <ul>
-                        <li>LLMs Product: RAG, Embedding, Vector store and optimized prompt with curated retrieval algorithms</li>
-                        <li>Analytics: Data pipeline, dashboard, metrics, cloud</li>
-                        <li>Predictive modeling with advanced feature engineering </li>
+                        <li>LLMs / Agentic AI: RAG, Prompt Engineering, Chain of thougts, Adversarial prompting, Embedding, Vector store</li>
+                        <li>NLP: Linguistic Feature Engineering, Social Imapact, Emotionally Intelligent models, Topic Modeling</li>
+                        <li>Software Engineering: Deployment, Architecture, Cloud, CI-CD </li>
                     </ul>
                 </p>    
                 <a href="files/Resume_Shivika.pdf" target="#"><button class="btn btn-dark">Resume</button></a>
@@ -143,7 +143,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">BI Analytics</div>
+                            <div class="circular-progress-value">Agentic AI</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -156,7 +156,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Data ETL</div>
+                            <div class="circular-progress-value">AI Prompt</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -167,7 +167,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">ML Cloud</div>
+                            <div class="circular-progress-value">Cloud</div>
                         </div>
                     </div>
                     <div class="col-6 col-lg-4 p-2">
@@ -178,7 +178,7 @@
                             <span class="circular-progress-right">
                                 <span class="circular-progress-bar"></span>
                             </span>
-                            <div class="circular-progress-value">Prod (CI/CD)</div>
+                            <div class="circular-progress-value">AI at scale</div>
                         </div>
                     </div>
                 </div>
@@ -197,9 +197,9 @@
                     <h2>NLP Engineer</h2>
                     <p><strong>Jan'20 – Nov'20</strong></p>
                     <ul>
-                        <li>NLP classifier to predict user behavior in social network for Google (82 F1 score)</li>
-                        <li>Fine tuned LLM RoBERTa model</li>
-                        <li>Advanced feature - GloVe, Stanford CoreNLP, TF-IDF, topic modeling and LIWC</li>
+                        <li>Finetuned RoBERTa Intent Classifier</li>
+                        <li>Linguistic features - LIWC, Stanford CoreNLP</li>
+                        <li>NLP, NLU, topic modeling, embeddings </li>
                     </ul>
                 </div>
             </div>
@@ -209,9 +209,9 @@
                     <h2>Data Scientist LLM</h2>
                     <p><strong>May'20 – Apr'21</strong></p>
                     <ul>
-                        <li>End2end Search Engine for UN reports (> Google)</li>
-                        <li>PDF text extraction, LLM BERT Summarization</li>
-                        <li>Recommendation & ranking with BM-25, semantic retrival</li>
+                        <li>Search Engine for UN reports (> Google)</li>
+                        <li>BERT Summary</li>
+                        <li>BM-25, vector search</li>
                     </ul>
                 </div>
             </div>
@@ -221,9 +221,8 @@
                     <h2>Software Engineer AI</h2>
                     <p><strong>Jul'20 – Apr'21</strong></p>
                     <ul>
-                        <li>Prompt engineered LLM GPT-3.5 for Salesforce email priority</li>
-                        <li>Web development for CEC geospatial data visualization</li>
-                        <li>Improved user experience by 37% through prototyping, debugging & troubleshooting</li>
+                        <li>Prompt engineering, NLP</li>
+                        <li>Fewshot learning</li>
                     </ul>
                 </div>
             </div>
@@ -233,8 +232,8 @@
                     <h2>Data Scientist AI/ML</h2>
                     <p><strong>May'21 – Aug'23</strong></p>
                     <ul>
-                        <li>Led ML production using Python, MySQL, Flask API & Docker, AWS, Sagemaker</li>
-                        <li>Real time dashboard - data viz for business insights</li>
+                        <li></li>
+                        <li>NLU report</li>
                         <li>Data models and data pipelines for automating cloud workflow from AWS S3 to RedShift</li>
                     </ul>
                 </div>
@@ -242,13 +241,12 @@
             <div class="timeline-item">
                 <div class="timeline-icon"><img src="images/viasat.png" alt="Viasat" /></div>
                 <div class="timeline-content">
-                    <h2>Data Scientist Gen AI</h2>
+                    <h2>Sr Data Scientist Gen AI prompt</h2>
                     <p><strong>Aug'23 – Present</strong></p>
                     <ul>
-                        <li>Productionalize at scale- LLM based BI agent for text to SQL for Ads</li>
+                        <li>Natural languiage to code</li>
                         <li>RAG, Embedding, Vector DB, indexing, langchain</li>
-                        <li>AWS(Bedrock, Lambda, API), GCP Vertex AI</li>
-                        <li>Yolo v5 app for real-time video monitoring using Redis</li>
+                        <li>Chain of thoughts, Innovative Prompt Engineering</li>
                     </ul>
                 </div>
             </div>
@@ -265,23 +263,23 @@
             </div>
             <div class="expertise-bubble" data-expertise="Productionalize AI/ML">
                 <img src="images/e2e.png" alt="Productionalize AI/ML">
-                <span>End-to-End Production AI</span>
+                <span> AI to Scaled Production</span>
             </div>
-            <div class="expertise-bubble" data-expertise="Big Data Pipeline">
-                <img src="images/bigdata.png" alt="Big Data Pipeline">
-                <span>Big Data Pipeline</span>
+            <div class="expertise-bubble" data-expertise="Natural language Processing">
+                <img src="images/nlp.jpeg" alt="Natural language Processing">
+                <span>Natural language Processing</span>
             </div>
-            <div class="expertise-bubble" data-expertise="LLM Gen AI">
-                <img src="images/llm.png" alt="LLM Gen AI">
-                <span>LLM Gen AI</span>
+            <div class="expertise-bubble" data-expertise="Generative AI">
+                <img src="images/gen_ai.png" alt="Generative AI">
+                <span>Generative AI</span>
             </div>
             <div class="expertise-bubble" data-expertise="Cloud AWS, GCP">
                 <img src="images/cloud.png" alt="Cloud AWS, GCP">
                 <span>Cloud AWS, GCP</span>
             </div>
-            <div class="expertise-bubble" data-expertise="Business Insights/ Data Viz">
-                <img src="images/bus.png" alt="Business Insights/ Data Viz">
-                <span>Business Insights/ Data Viz</span>
+            <div class="expertise-bubble" data-expertise="Agentic AI, LLM">
+                <img src="images/prompt.png" alt="Agentic AI, LLM">
+                <span>Prompt Engineer</span>
             </div>
         </div>
     </div>
@@ -300,7 +298,7 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/chatbot.png"/>
-                                        <h5 class="card-title mb-0"> LLM App text to SQL</h5>
+                                        <h5 class="card-title mb-0"> Conversational AI</h5>
                                     </div>
                                     <div class="sub-title">
                                         <span>Developer</span>
@@ -309,7 +307,7 @@
                                 </div>
                             </a>
                             <div class="card-body text-justify pt-1 pb-1">
-                                <p>Chatbot to talk to DB and automate Business Intelligence analysis</p>
+                                <p>Conversational AI</p>
                                 <img class="card-img" src="images/projects/textSQL.png"/>
                                 <span class="float-right">
                                     <a class="btn btn-outline-info btn-sm mb-2" target="#"></a>
@@ -334,7 +332,7 @@
                                 </div>
                             </a>
                             <div class="card-body text-justify pt-1 pb-1">
-                                <p>Google.org LLM project for classifying user behavior, using advanced NLP - LLM RoBERTa, Glove embedding, TF-IDF, LIWC,  Stanford Core-NLP, Logistic Regression</p>
+                                <p>Google project for detecting user behavior. RoBERTa, embedding, LIWC, Stanford Core-NLP</p>
                                 <img class="card-img" src="images/projects/google.png"/>
                                 <span class="float-right">
                                     <a class="github-button-inactive" href="https://blog.google/outreach-initiatives/google-org/googleorg-and-family-independence-initiative-collaborate-empower-low-income-families/" data-icon="octicon-standard" data-show-count="true" aria-label="Star Nocode">Star</a>
@@ -350,16 +348,15 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/logo.png">
-                                        <h5 class="card-title mb-0"> Microsoft Project Search Recommendation & Ranking </h5>
+                                        <h5 class="card-title mb-0"> Microsoft funded  Search Engine</h5>
                                     </div>
                                     <div class="sub-title">
-                                        <span>Data Scientist - LLM</span>
                                         <span> May 2020 - April 2021 </span>
                                     </div>
                                 </div>
                             </a>
                             <div class="card-body text-justify pt-1 pb-1">
-                                <p>Search engine for UN program managers. LLM BERT based summerization and BM25 & Semantic retrieval.</p>
+                                <p>Search engine for United Nations. BERT, summerization and BM25 & Vector Search.</p>
                                 <span class="float-right">
                                     <img class="card-img" src="images/projects/chetah.png">
                                     <a class="github-button-inactive" href="https://www.data4good.center/projects/chetah" data-icon="octicon-standard" data-show-count="true" aria-label="Star Toha">Star</a>
@@ -384,7 +381,7 @@
                                 </div>
                             </a>
                             <div class="card-body text-justify pt-1 pb-1">
-                                <p> DL based image similarity for visual ranking</p>
+                                <p> Deep Learning Visual Search</p>
                                 <img class="card-img" src="images/projects/AWS.jpg"/>
                                 <span class="float-right">
                                     <a class="github-button-inactive" href="https://github.com/sbisen/Deep-Learning-AWS-Visual-search" data-icon="octicon-standard" data-show-count="true" aria-label="Star Tensorflow">Star</a>
@@ -400,16 +397,16 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/matlab.jpeg"/>
-                                        <h5 class="card-title mb-0">International Publication on ML</h5>
+                                        <h5 class="card-title mb-0">International Publication on AI</h5>
                                     </div>
                                     <div class="sub-title">
-                                        <span>Early stage breast cancer detection</span>
+                                        <span>AI based breast cancer detection</span>
                                         <span>2013</span>
                                     </div>
                                 </div>
                             </a>
                             <div class="card-body text-justify pt-1 pb-1">
-                                <p>An Improved Segmentation Technique Based On DelaunayTriangulations For Breast Infiltration/Tumor Detection From Mammograms</p>
+                                <p>AI based breast cancer detection</p>
                                 <img class="card-img" src="images/projects/breast.png"/>
                                 <span class="float-right">
                                     <a class="btn btn-outline-info btn-sm mb-2" href="http://www.enggjournals.com/ijet//abstract.html?file=13-05-03-133" target="#">Details</a>
@@ -425,7 +422,7 @@
                                 <div>
                                     <div class="d-flex">
                                         <img class="card-img-xs" src="images/projects/d3.jpg" alt="Nocode" />
-                                        <h5 class="card-title mb-0">Web Development / Data Analysis & Viz</h5>
+                                        <h5 class="card-title mb-0">Front End Development</h5>
                                     </div>
                                     <div class="sub-title">
                                         <span>Developer</span>
@@ -434,7 +431,7 @@
                                 </div>
                             </a>
                             <div class="card-body text-justify pt-1 pb-1">
-                                <p>Advanced Data Visualization on complex large dataset CDC. Time animated Dorling Scartogram and Interactive line chart</p>
+                                <p>Interactive App</p>
                                 <img class="card-img" src="images/projects/obesity.png"/>
                                 <span class="float-right">
                                     <a class="github-button-inactive" href="https://sbisen.github.io/d3-obesity-usa/" data-icon="octicon-standard" data-show-count="true" aria-label="Star Nocode">Star</a>
@@ -453,11 +450,11 @@
         <h1 class="text-center">Achievements</h1>
         <div class="achievement-entry text-left">
             <ul>
-                <li><a href="https://www.youtube.com/watch?v=w9IgzH5YssQ" target="_blank">Productionalize AI/ML model at scale</a></li>
-                <li><a href="https://genaisummit.ai/#/" target="_blank">Gen AI Summit SF 2024</a></li>
-                <li><a href="https://www.comet.com/site/about-us/news-and-events/press-releases/responding-to-community-demand-comet-announces-convergence-2022-bringing-together-leaders-to-share-insights-on-how-to-solve-the-enterprises-biggest-challenges-with-machine-learning/" target="_blank">Speaker at ML Conference</a></li>
-                <li><a href="https://www.kaggle.com/competitions/umich-si650-pandemic-ir-system-v2/leaderboard" target="_blank">Kaggle winner for retriver algorithm</a></li>
-                <li><a href="https://lsa.umich.edu/content/dam/stats-assets/alumni-spotlights/Alumni%20Spotlight%20Newsletter-ShivikaB%20(1).pdf" target="_blank"> UMich Scholarship for STEM achievement</a></li>
+                <li><a href="https://www.datascience.salon/austin/shivika-bisen/" target="_blank">Speaker / Panelist at Agentic AI LLM Conference </a></li>
+                <li><a href="https://cloud.withgoogle.com/next/25" target="_blank">Attendent Google Next Las Vegas 2025</a></li>
+                <li><a href="https://www.comet.com/site/about-us/news-and-events/press-releases/responding-to-community-demand-comet-announces-convergence-2022-bringing-together-leaders-to-share-insights-on-how-to-solve-the-enterprises-biggest-challenges-with-machine-learning/" target="_blank">Speaker at AI Conference</a></li>
+                <li><a href="https://www.kaggle.com/competitions/umich-si650-pandemic-ir-system-v2/leaderboard" target="_blank">Top 2nd rank in Kaggle competition</a></li>
+                <li><a href="https://lsa.umich.edu/content/dam/stats-assets/alumni-spotlights/Alumni%20Spotlight%20Newsletter-ShivikaB%20(1).pdf" target="_blank">UMich STEM Scholarship</a></li>
             </ul>
         </div>
     </div>
@@ -469,7 +466,7 @@
             <div class="col-md-4 col-sm-12">
                 <h5>Contact Me</h5>
                 <ul>
-                    <li><span>Email: </span> <span>sbisen@umich.edu</span></li>
+                    <li><span>Email: </span> <span>shivikabisen@gmai.com</span></li>
                     <li><span>Phone: </span> <span>&#43;1 (248) 229-6074</span></li>
                 </ul>
             </div>
